--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#c8c8c8</color>
+    <color name="mistyRose">#FFFFE4E1</color>
+    <color name="lightGreen">#FF90EE90</color>
 </resources>
