--- a/app/src/main/res/layout/timesheet_plan_recycler.xml
+++ b/app/src/main/res/layout/timesheet_plan_recycler.xml
@@ -1,102 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <com.google.android.material.card.MaterialCardView
+    <data>
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginBottom="5dp"
-        app:strokeColor="@color/gray"
-        app:strokeWidth="0.5dp"
-        android:backgroundTint="#FFFFFF">
+        android:layout_height="wrap_content">
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginBottom="5dp"
+            app:strokeColor="@color/gray"
+            app:strokeWidth="0.5dp"
+            android:backgroundTint="#FFFFFF">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                >
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/schedule_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="@string/schedule_time"
-                    android:textSize="20sp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:backgroundTint="@color/white"
-                    android:paddingEnd="10dp"
-                    android:paddingStart="6dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/schedule_title"
-                    android:layout_width="0dp"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/schedule_title"
-                    app:layout_constraintWidth_percent="0.6"
-                    android:textSize="15sp"
-                    android:gravity="start"
-                    android:layout_marginTop="8dp"
-                    android:layout_margin="5dp"
-                    app:layout_constraintLeft_toRightOf="@id/schedule_time"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                    android:padding="2dp"
+                    >
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/schedule_place"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/schedule_place"
-                    android:textSize="13sp"
-                    android:layout_margin="5dp"
-                    app:layout_constraintTop_toBottomOf="@id/schedule_title"
-                    app:layout_constraintLeft_toRightOf="@id/schedule_time"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/schedule_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/schedule_time"
+                        android:textSize="20sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:backgroundTint="@color/white"
+                        android:paddingEnd="10dp"
+                        android:paddingStart="6dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/schedule_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/schedule_title"
+                        app:layout_constraintWidth_percent="0.6"
+                        android:textSize="15sp"
+                        android:gravity="start"
+                        android:layout_marginTop="8dp"
+                        android:layout_margin="5dp"
+                        app:layout_constraintLeft_toRightOf="@id/schedule_time"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/schedule_memo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="@string/schedule_memo"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textSize="13sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@id/schedule_time"
-                    app:layout_constraintTop_toBottomOf="@id/schedule_place" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/schedule_place"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/schedule_place"
+                        android:textSize="13sp"
+                        android:layout_margin="5dp"
+                        app:layout_constraintTop_toBottomOf="@id/schedule_title"
+                        app:layout_constraintLeft_toRightOf="@id/schedule_time"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/revise_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:paddingStart="4dp"
-                    android:paddingTop="0dp"
-                    android:layout_marginEnd="4dp"
-                    app:icon="@drawable/ic_baseline_edit_24"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toLeftOf="@id/delete_timesheet_btn"
-                    tools:ignore="RtlSymmetry" />
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/delete_timesheet_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:paddingStart="4dp"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    app:icon="@drawable/ic_baseline_delete_24"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    tools:ignore="RtlSymmetry" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/schedule_memo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="@string/schedule_memo"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        android:textSize="13sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/schedule_time"
+                        app:layout_constraintTop_toBottomOf="@id/schedule_place" />
 
-    </com.google.android.material.card.MaterialCardView>
-</LinearLayout>
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/revise_btn"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:paddingStart="4dp"
+                        android:paddingTop="0dp"
+                        android:layout_marginEnd="4dp"
+                        app:icon="@drawable/ic_baseline_edit_24"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/delete_timesheet_btn"
+                        tools:ignore="RtlSymmetry" />
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/delete_timesheet_btn"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:paddingStart="4dp"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        app:icon="@drawable/ic_baseline_delete_24"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        tools:ignore="RtlSymmetry" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
+</layout>
