--- a/app/src/main/res/layout/festivallist_fragment_layout.xml
+++ b/app/src/main/res/layout/festivallist_fragment_layout.xml
@@ -34,13 +34,14 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
                 android:inputType="datetime"
                 android:maxLines="1"
-                android:text= "@string/dateBTN"
+                android:text="@string/dateBTN"
+                android:onClick="@{()->viewModel.onDateClick()}"
                 android:textColor="@color/black"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="10dp"
                 app:strokeColor="@color/gray"
                 app:strokeWidth="1dp" />
 
